Complete feature set: snapshots, live mirror, heatmaps, retention, keyframes
- arena snapshots: palette+zstd .erpa format (unit-tested roundtrip,
  sha256, corruption detection), budgeted main-thread scan/apply,
  /erp snapshot create|list|info|verify|delete, referenced from
  /erp record start and auto-applied when a playback session opens
- streaming live mirror: packets buffered on arrival and applied into
  a mirror world after the configured delay, snapshot base state,
  read-only viewers with hotbar, auto-teardown when the session ends
- heatmaps: movement density from frames, kill/death/loot from the
  event index, log-scaled five-step gradient, budgeted, restorable
- playback keyframes: cumulative block/frame checkpoints make backward
  seeks O(interval) instead of O(session)
- retention: /erp cleanup + daily auto-cleanup honoring max-days,
  max-gb and favorites (unit-tested)
- /erp reindex rebuilds the SQLite index from segment files (tested)
- camera slots (/erp cam save|goto|list|delete) and POV mode
- integration example module compiling against the public API only